Proyecto1/gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOBLEPT

Grammar

Rule 0     S' -> init
Rule 1     init -> funciones
Rule 2     funciones -> funciones funcion
Rule 3     funciones -> funcion
Rule 4     funcion -> tipo_funcion ID PIZQ PDER bloque
Rule 5     funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque
Rule 6     lista_parametros -> lista_parametros COMA parametro
Rule 7     lista_parametros -> parametro
Rule 8     parametro -> tipo_dato ID
Rule 9     bloque -> CORIZQ CORDER
Rule 10    bloque -> CORIZQ instrucciones CORDER
Rule 11    instrucciones -> instrucciones instruccion
Rule 12    instrucciones -> instruccion
Rule 13    instruccion -> print_inst PTCOMA
Rule 14    instruccion -> declaracion PTCOMA
Rule 15    instruccion -> llamada PTCOMA
Rule 16    instruccion -> return_inst PTCOMA
Rule 17    instruccion -> if_instr
Rule 18    declaracion -> tipo_dato ID IGUAL expresion
Rule 19    declaracion -> tipo_dato ID
Rule 20    print_inst -> PRINT PIZQ expresion PDER
Rule 21    llamada -> ID PIZQ PDER
Rule 22    llamada -> ID PIZQ lista_expresiones PDER
Rule 23    return_inst -> RETURN_W
Rule 24    return_inst -> RETURN_W expresion
Rule 25    if_instr -> IF_W PIZQ expresion PDER bloque
Rule 26    if_instr -> IF_W PIZQ expresion PDER bloque ELSE_W bloque
Rule 27    if_instr -> IF_W PIZQ expresion PDER bloque listaelseif
Rule 28    if_instr -> IF_W PIZQ expresion PDER bloque listaelseif ELSE_W bloque
Rule 29    listaelseif -> listaelseif else_if
Rule 30    listaelseif -> else_if
Rule 31    else_if -> ELSE_W IF_W PIZQ expresion PDER bloque
Rule 32    lista_expresiones -> lista_expresiones COMA expresion
Rule 33    lista_expresiones -> expresion
Rule 34    expresion -> expresion OR expresion
Rule 35    expresion -> expresion AND expresion
Rule 36    expresion -> NOT expresion
Rule 37    expresion -> expresion MENOR expresion
Rule 38    expresion -> expresion MAYOR expresion
Rule 39    expresion -> expresion MAYORIGUAL expresion
Rule 40    expresion -> expresion MENORIGUAL expresion
Rule 41    expresion -> expresion DIFERENTE expresion
Rule 42    expresion -> expresion IGUALIGUAL expresion
Rule 43    expresion -> MENOS expresion
Rule 44    expresion -> expresion MAS expresion
Rule 45    expresion -> expresion MENOS expresion
Rule 46    expresion -> expresion MULTIPLICACION expresion
Rule 47    expresion -> expresion DIVISION expresion
Rule 48    expresion -> PIZQ expresion PDER
Rule 49    expresion -> ENTERO
Rule 50    expresion -> DECIMAL
Rule 51    expresion -> ID
Rule 52    expresion -> CADENA
Rule 53    expresion -> TRUE
Rule 54    expresion -> FALSE
Rule 55    expresion -> llamada
Rule 56    tipo_funcion -> INT
Rule 57    tipo_funcion -> STRING_TYPE
Rule 58    tipo_funcion -> BOOLEAN
Rule 59    tipo_funcion -> VOID
Rule 60    tipo_funcion -> FLOAT
Rule 61    tipo_dato -> INT
Rule 62    tipo_dato -> STRING_TYPE
Rule 63    tipo_dato -> BOOLEAN
Rule 64    tipo_dato -> FLOAT

Terminals, with rules where they appear

AND                  : 35
BOOLEAN              : 58 63
CADENA               : 52
COMA                 : 6 32
CORDER               : 9 10
CORIZQ               : 9 10
DECIMAL              : 50
DIFERENTE            : 41
DIVISION             : 47
DOBLEPT              : 
ELSE_W               : 26 28 31
ENTERO               : 49
FALSE                : 54
FLOAT                : 60 64
ID                   : 4 5 8 18 19 21 22 51
IF_W                 : 25 26 27 28 31
IGUAL                : 18
IGUALIGUAL           : 42
INT                  : 56 61
MAS                  : 44
MAYOR                : 38
MAYORIGUAL           : 39
MENOR                : 37
MENORIGUAL           : 40
MENOS                : 43 45
MULTIPLICACION       : 46
NOT                  : 36
OR                   : 34
PDER                 : 4 5 20 21 22 25 26 27 28 31 48
PIZQ                 : 4 5 20 21 22 25 26 27 28 31 48
PRINT                : 20
PTCOMA               : 13 14 15 16
RETURN_W             : 23 24
STRING_TYPE          : 57 62
TRUE                 : 53
VOID                 : 59
error                : 

Nonterminals, with rules where they appear

bloque               : 4 5 25 26 26 27 28 28 31
declaracion          : 14
else_if              : 29 30
expresion            : 18 20 24 25 26 27 28 31 32 33 34 34 35 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 44 45 45 46 46 47 47 48
funcion              : 2 3
funciones            : 1 2
if_instr             : 17
init                 : 0
instruccion          : 11 12
instrucciones        : 10 11
lista_expresiones    : 22 32
lista_parametros     : 5 6
listaelseif          : 27 28 29
llamada              : 15 55
parametro            : 6 7
print_inst           : 13
return_inst          : 16
tipo_dato            : 8 18 19
tipo_funcion         : 4 5

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . funciones
    (2) funciones -> . funciones funcion
    (3) funciones -> . funcion
    (4) funcion -> . tipo_funcion ID PIZQ PDER bloque
    (5) funcion -> . tipo_funcion ID PIZQ lista_parametros PDER bloque
    (56) tipo_funcion -> . INT
    (57) tipo_funcion -> . STRING_TYPE
    (58) tipo_funcion -> . BOOLEAN
    (59) tipo_funcion -> . VOID
    (60) tipo_funcion -> . FLOAT

    INT             shift and go to state 5
    STRING_TYPE     shift and go to state 6
    BOOLEAN         shift and go to state 7
    VOID            shift and go to state 8
    FLOAT           shift and go to state 9

    init                           shift and go to state 1
    funciones                      shift and go to state 2
    funcion                        shift and go to state 3
    tipo_funcion                   shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> funciones .
    (2) funciones -> funciones . funcion
    (4) funcion -> . tipo_funcion ID PIZQ PDER bloque
    (5) funcion -> . tipo_funcion ID PIZQ lista_parametros PDER bloque
    (56) tipo_funcion -> . INT
    (57) tipo_funcion -> . STRING_TYPE
    (58) tipo_funcion -> . BOOLEAN
    (59) tipo_funcion -> . VOID
    (60) tipo_funcion -> . FLOAT

    $end            reduce using rule 1 (init -> funciones .)
    INT             shift and go to state 5
    STRING_TYPE     shift and go to state 6
    BOOLEAN         shift and go to state 7
    VOID            shift and go to state 8
    FLOAT           shift and go to state 9

    funcion                        shift and go to state 10
    tipo_funcion                   shift and go to state 4

state 3

    (3) funciones -> funcion .

    INT             reduce using rule 3 (funciones -> funcion .)
    STRING_TYPE     reduce using rule 3 (funciones -> funcion .)
    BOOLEAN         reduce using rule 3 (funciones -> funcion .)
    VOID            reduce using rule 3 (funciones -> funcion .)
    FLOAT           reduce using rule 3 (funciones -> funcion .)
    $end            reduce using rule 3 (funciones -> funcion .)


state 4

    (4) funcion -> tipo_funcion . ID PIZQ PDER bloque
    (5) funcion -> tipo_funcion . ID PIZQ lista_parametros PDER bloque

    ID              shift and go to state 11


state 5

    (56) tipo_funcion -> INT .

    ID              reduce using rule 56 (tipo_funcion -> INT .)


state 6

    (57) tipo_funcion -> STRING_TYPE .

    ID              reduce using rule 57 (tipo_funcion -> STRING_TYPE .)


state 7

    (58) tipo_funcion -> BOOLEAN .

    ID              reduce using rule 58 (tipo_funcion -> BOOLEAN .)


state 8

    (59) tipo_funcion -> VOID .

    ID              reduce using rule 59 (tipo_funcion -> VOID .)


state 9

    (60) tipo_funcion -> FLOAT .

    ID              reduce using rule 60 (tipo_funcion -> FLOAT .)


state 10

    (2) funciones -> funciones funcion .

    INT             reduce using rule 2 (funciones -> funciones funcion .)
    STRING_TYPE     reduce using rule 2 (funciones -> funciones funcion .)
    BOOLEAN         reduce using rule 2 (funciones -> funciones funcion .)
    VOID            reduce using rule 2 (funciones -> funciones funcion .)
    FLOAT           reduce using rule 2 (funciones -> funciones funcion .)
    $end            reduce using rule 2 (funciones -> funciones funcion .)


state 11

    (4) funcion -> tipo_funcion ID . PIZQ PDER bloque
    (5) funcion -> tipo_funcion ID . PIZQ lista_parametros PDER bloque

    PIZQ            shift and go to state 12


state 12

    (4) funcion -> tipo_funcion ID PIZQ . PDER bloque
    (5) funcion -> tipo_funcion ID PIZQ . lista_parametros PDER bloque
    (6) lista_parametros -> . lista_parametros COMA parametro
    (7) lista_parametros -> . parametro
    (8) parametro -> . tipo_dato ID
    (61) tipo_dato -> . INT
    (62) tipo_dato -> . STRING_TYPE
    (63) tipo_dato -> . BOOLEAN
    (64) tipo_dato -> . FLOAT

    PDER            shift and go to state 13
    INT             shift and go to state 17
    STRING_TYPE     shift and go to state 18
    BOOLEAN         shift and go to state 19
    FLOAT           shift and go to state 20

    lista_parametros               shift and go to state 14
    parametro                      shift and go to state 15
    tipo_dato                      shift and go to state 16

state 13

    (4) funcion -> tipo_funcion ID PIZQ PDER . bloque
    (9) bloque -> . CORIZQ CORDER
    (10) bloque -> . CORIZQ instrucciones CORDER

    CORIZQ          shift and go to state 22

    bloque                         shift and go to state 21

state 14

    (5) funcion -> tipo_funcion ID PIZQ lista_parametros . PDER bloque
    (6) lista_parametros -> lista_parametros . COMA parametro

    PDER            shift and go to state 23
    COMA            shift and go to state 24


state 15

    (7) lista_parametros -> parametro .

    PDER            reduce using rule 7 (lista_parametros -> parametro .)
    COMA            reduce using rule 7 (lista_parametros -> parametro .)


state 16

    (8) parametro -> tipo_dato . ID

    ID              shift and go to state 25


state 17

    (61) tipo_dato -> INT .

    ID              reduce using rule 61 (tipo_dato -> INT .)


state 18

    (62) tipo_dato -> STRING_TYPE .

    ID              reduce using rule 62 (tipo_dato -> STRING_TYPE .)


state 19

    (63) tipo_dato -> BOOLEAN .

    ID              reduce using rule 63 (tipo_dato -> BOOLEAN .)


state 20

    (64) tipo_dato -> FLOAT .

    ID              reduce using rule 64 (tipo_dato -> FLOAT .)


state 21

    (4) funcion -> tipo_funcion ID PIZQ PDER bloque .

    INT             reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)
    STRING_TYPE     reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)
    BOOLEAN         reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)
    VOID            reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)
    FLOAT           reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)
    $end            reduce using rule 4 (funcion -> tipo_funcion ID PIZQ PDER bloque .)


state 22

    (9) bloque -> CORIZQ . CORDER
    (10) bloque -> CORIZQ . instrucciones CORDER
    (11) instrucciones -> . instrucciones instruccion
    (12) instrucciones -> . instruccion
    (13) instruccion -> . print_inst PTCOMA
    (14) instruccion -> . declaracion PTCOMA
    (15) instruccion -> . llamada PTCOMA
    (16) instruccion -> . return_inst PTCOMA
    (17) instruccion -> . if_instr
    (20) print_inst -> . PRINT PIZQ expresion PDER
    (18) declaracion -> . tipo_dato ID IGUAL expresion
    (19) declaracion -> . tipo_dato ID
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER
    (23) return_inst -> . RETURN_W
    (24) return_inst -> . RETURN_W expresion
    (25) if_instr -> . IF_W PIZQ expresion PDER bloque
    (26) if_instr -> . IF_W PIZQ expresion PDER bloque ELSE_W bloque
    (27) if_instr -> . IF_W PIZQ expresion PDER bloque listaelseif
    (28) if_instr -> . IF_W PIZQ expresion PDER bloque listaelseif ELSE_W bloque
    (61) tipo_dato -> . INT
    (62) tipo_dato -> . STRING_TYPE
    (63) tipo_dato -> . BOOLEAN
    (64) tipo_dato -> . FLOAT

    CORDER          shift and go to state 26
    PRINT           shift and go to state 34
    ID              shift and go to state 36
    RETURN_W        shift and go to state 37
    IF_W            shift and go to state 38
    INT             shift and go to state 17
    STRING_TYPE     shift and go to state 18
    BOOLEAN         shift and go to state 19
    FLOAT           shift and go to state 20

    instrucciones                  shift and go to state 27
    instruccion                    shift and go to state 28
    print_inst                     shift and go to state 29
    declaracion                    shift and go to state 30
    llamada                        shift and go to state 31
    return_inst                    shift and go to state 32
    if_instr                       shift and go to state 33
    tipo_dato                      shift and go to state 35

state 23

    (5) funcion -> tipo_funcion ID PIZQ lista_parametros PDER . bloque
    (9) bloque -> . CORIZQ CORDER
    (10) bloque -> . CORIZQ instrucciones CORDER

    CORIZQ          shift and go to state 22

    bloque                         shift and go to state 39

state 24

    (6) lista_parametros -> lista_parametros COMA . parametro
    (8) parametro -> . tipo_dato ID
    (61) tipo_dato -> . INT
    (62) tipo_dato -> . STRING_TYPE
    (63) tipo_dato -> . BOOLEAN
    (64) tipo_dato -> . FLOAT

    INT             shift and go to state 17
    STRING_TYPE     shift and go to state 18
    BOOLEAN         shift and go to state 19
    FLOAT           shift and go to state 20

    parametro                      shift and go to state 40
    tipo_dato                      shift and go to state 16

state 25

    (8) parametro -> tipo_dato ID .

    PDER            reduce using rule 8 (parametro -> tipo_dato ID .)
    COMA            reduce using rule 8 (parametro -> tipo_dato ID .)


state 26

    (9) bloque -> CORIZQ CORDER .

    INT             reduce using rule 9 (bloque -> CORIZQ CORDER .)
    STRING_TYPE     reduce using rule 9 (bloque -> CORIZQ CORDER .)
    BOOLEAN         reduce using rule 9 (bloque -> CORIZQ CORDER .)
    VOID            reduce using rule 9 (bloque -> CORIZQ CORDER .)
    FLOAT           reduce using rule 9 (bloque -> CORIZQ CORDER .)
    $end            reduce using rule 9 (bloque -> CORIZQ CORDER .)
    ELSE_W          reduce using rule 9 (bloque -> CORIZQ CORDER .)
    CORDER          reduce using rule 9 (bloque -> CORIZQ CORDER .)
    PRINT           reduce using rule 9 (bloque -> CORIZQ CORDER .)
    ID              reduce using rule 9 (bloque -> CORIZQ CORDER .)
    RETURN_W        reduce using rule 9 (bloque -> CORIZQ CORDER .)
    IF_W            reduce using rule 9 (bloque -> CORIZQ CORDER .)


state 27

    (10) bloque -> CORIZQ instrucciones . CORDER
    (11) instrucciones -> instrucciones . instruccion
    (13) instruccion -> . print_inst PTCOMA
    (14) instruccion -> . declaracion PTCOMA
    (15) instruccion -> . llamada PTCOMA
    (16) instruccion -> . return_inst PTCOMA
    (17) instruccion -> . if_instr
    (20) print_inst -> . PRINT PIZQ expresion PDER
    (18) declaracion -> . tipo_dato ID IGUAL expresion
    (19) declaracion -> . tipo_dato ID
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER
    (23) return_inst -> . RETURN_W
    (24) return_inst -> . RETURN_W expresion
    (25) if_instr -> . IF_W PIZQ expresion PDER bloque
    (26) if_instr -> . IF_W PIZQ expresion PDER bloque ELSE_W bloque
    (27) if_instr -> . IF_W PIZQ expresion PDER bloque listaelseif
    (28) if_instr -> . IF_W PIZQ expresion PDER bloque listaelseif ELSE_W bloque
    (61) tipo_dato -> . INT
    (62) tipo_dato -> . STRING_TYPE
    (63) tipo_dato -> . BOOLEAN
    (64) tipo_dato -> . FLOAT

    CORDER          shift and go to state 41
    PRINT           shift and go to state 34
    ID              shift and go to state 36
    RETURN_W        shift and go to state 37
    IF_W            shift and go to state 38
    INT             shift and go to state 17
    STRING_TYPE     shift and go to state 18
    BOOLEAN         shift and go to state 19
    FLOAT           shift and go to state 20

    instruccion                    shift and go to state 42
    print_inst                     shift and go to state 29
    declaracion                    shift and go to state 30
    llamada                        shift and go to state 31
    return_inst                    shift and go to state 32
    if_instr                       shift and go to state 33
    tipo_dato                      shift and go to state 35

state 28

    (12) instrucciones -> instruccion .

    CORDER          reduce using rule 12 (instrucciones -> instruccion .)
    PRINT           reduce using rule 12 (instrucciones -> instruccion .)
    ID              reduce using rule 12 (instrucciones -> instruccion .)
    RETURN_W        reduce using rule 12 (instrucciones -> instruccion .)
    IF_W            reduce using rule 12 (instrucciones -> instruccion .)
    INT             reduce using rule 12 (instrucciones -> instruccion .)
    STRING_TYPE     reduce using rule 12 (instrucciones -> instruccion .)
    BOOLEAN         reduce using rule 12 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 12 (instrucciones -> instruccion .)


state 29

    (13) instruccion -> print_inst . PTCOMA

    PTCOMA          shift and go to state 43


state 30

    (14) instruccion -> declaracion . PTCOMA

    PTCOMA          shift and go to state 44


state 31

    (15) instruccion -> llamada . PTCOMA

    PTCOMA          shift and go to state 45


state 32

    (16) instruccion -> return_inst . PTCOMA

    PTCOMA          shift and go to state 46


state 33

    (17) instruccion -> if_instr .

    CORDER          reduce using rule 17 (instruccion -> if_instr .)
    PRINT           reduce using rule 17 (instruccion -> if_instr .)
    ID              reduce using rule 17 (instruccion -> if_instr .)
    RETURN_W        reduce using rule 17 (instruccion -> if_instr .)
    IF_W            reduce using rule 17 (instruccion -> if_instr .)
    INT             reduce using rule 17 (instruccion -> if_instr .)
    STRING_TYPE     reduce using rule 17 (instruccion -> if_instr .)
    BOOLEAN         reduce using rule 17 (instruccion -> if_instr .)
    FLOAT           reduce using rule 17 (instruccion -> if_instr .)


state 34

    (20) print_inst -> PRINT . PIZQ expresion PDER

    PIZQ            shift and go to state 47


state 35

    (18) declaracion -> tipo_dato . ID IGUAL expresion
    (19) declaracion -> tipo_dato . ID

    ID              shift and go to state 48


state 36

    (21) llamada -> ID . PIZQ PDER
    (22) llamada -> ID . PIZQ lista_expresiones PDER

    PIZQ            shift and go to state 49


state 37

    (23) return_inst -> RETURN_W .
    (24) return_inst -> RETURN_W . expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion AND expresion
    (36) expresion -> . NOT expresion
    (37) expresion -> . expresion MENOR expresion
    (38) expresion -> . expresion MAYOR expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion MENORIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion IGUALIGUAL expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion MULTIPLICACION expresion
    (47) expresion -> . expresion DIVISION expresion
    (48) expresion -> . PIZQ expresion PDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . TRUE
    (54) expresion -> . FALSE
    (55) expresion -> . llamada
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER

    PTCOMA          reduce using rule 23 (return_inst -> RETURN_W .)
    NOT             shift and go to state 51
    MENOS           shift and go to state 52
    PIZQ            shift and go to state 53
    ENTERO          shift and go to state 54
    DECIMAL         shift and go to state 55
    ID              shift and go to state 56
    CADENA          shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    expresion                      shift and go to state 50
    llamada                        shift and go to state 60

state 38

    (25) if_instr -> IF_W . PIZQ expresion PDER bloque
    (26) if_instr -> IF_W . PIZQ expresion PDER bloque ELSE_W bloque
    (27) if_instr -> IF_W . PIZQ expresion PDER bloque listaelseif
    (28) if_instr -> IF_W . PIZQ expresion PDER bloque listaelseif ELSE_W bloque

    PIZQ            shift and go to state 61


state 39

    (5) funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .

    INT             reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)
    STRING_TYPE     reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)
    BOOLEAN         reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)
    VOID            reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)
    FLOAT           reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)
    $end            reduce using rule 5 (funcion -> tipo_funcion ID PIZQ lista_parametros PDER bloque .)


state 40

    (6) lista_parametros -> lista_parametros COMA parametro .

    PDER            reduce using rule 6 (lista_parametros -> lista_parametros COMA parametro .)
    COMA            reduce using rule 6 (lista_parametros -> lista_parametros COMA parametro .)


state 41

    (10) bloque -> CORIZQ instrucciones CORDER .

    INT             reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    STRING_TYPE     reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    BOOLEAN         reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    VOID            reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    FLOAT           reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    $end            reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    ELSE_W          reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    CORDER          reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    PRINT           reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    ID              reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    RETURN_W        reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)
    IF_W            reduce using rule 10 (bloque -> CORIZQ instrucciones CORDER .)


state 42

    (11) instrucciones -> instrucciones instruccion .

    CORDER          reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    RETURN_W        reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    IF_W            reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    INT             reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    STRING_TYPE     reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    BOOLEAN         reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    FLOAT           reduce using rule 11 (instrucciones -> instrucciones instruccion .)


state 43

    (13) instruccion -> print_inst PTCOMA .

    CORDER          reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    PRINT           reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    ID              reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    RETURN_W        reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    IF_W            reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    INT             reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    STRING_TYPE     reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    BOOLEAN         reduce using rule 13 (instruccion -> print_inst PTCOMA .)
    FLOAT           reduce using rule 13 (instruccion -> print_inst PTCOMA .)


state 44

    (14) instruccion -> declaracion PTCOMA .

    CORDER          reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    PRINT           reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    ID              reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    RETURN_W        reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    IF_W            reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    INT             reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    STRING_TYPE     reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    BOOLEAN         reduce using rule 14 (instruccion -> declaracion PTCOMA .)
    FLOAT           reduce using rule 14 (instruccion -> declaracion PTCOMA .)


state 45

    (15) instruccion -> llamada PTCOMA .

    CORDER          reduce using rule 15 (instruccion -> llamada PTCOMA .)
    PRINT           reduce using rule 15 (instruccion -> llamada PTCOMA .)
    ID              reduce using rule 15 (instruccion -> llamada PTCOMA .)
    RETURN_W        reduce using rule 15 (instruccion -> llamada PTCOMA .)
    IF_W            reduce using rule 15 (instruccion -> llamada PTCOMA .)
    INT             reduce using rule 15 (instruccion -> llamada PTCOMA .)
    STRING_TYPE     reduce using rule 15 (instruccion -> llamada PTCOMA .)
    BOOLEAN         reduce using rule 15 (instruccion -> llamada PTCOMA .)
    FLOAT           reduce using rule 15 (instruccion -> llamada PTCOMA .)


state 46

    (16) instruccion -> return_inst PTCOMA .

    CORDER          reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    PRINT           reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    ID              reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    RETURN_W        reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    IF_W            reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    INT             reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    STRING_TYPE     reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    BOOLEAN         reduce using rule 16 (instruccion -> return_inst PTCOMA .)
    FLOAT           reduce using rule 16 (instruccion -> return_inst PTCOMA .)


state 47

    (20) print_inst -> PRINT PIZQ . expresion PDER
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion AND expresion
    (36) expresion -> . NOT expresion
    (37) expresion -> . expresion MENOR expresion
    (38) expresion -> . expresion MAYOR expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion MENORIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion IGUALIGUAL expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion MULTIPLICACION expresion
    (47) expresion -> . expresion DIVISION expresion
    (48) expresion -> . PIZQ expresion PDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . TRUE
    (54) expresion -> . FALSE
    (55) expresion -> . llamada
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER

    NOT             shift and go to state 51
    MENOS           shift and go to state 52
    PIZQ            shift and go to state 53
    ENTERO          shift and go to state 54
    DECIMAL         shift and go to state 55
    ID              shift and go to state 56
    CADENA          shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    expresion                      shift and go to state 62
    llamada                        shift and go to state 60

state 48

    (18) declaracion -> tipo_dato ID . IGUAL expresion
    (19) declaracion -> tipo_dato ID .

    IGUAL           shift and go to state 63
    PTCOMA          reduce using rule 19 (declaracion -> tipo_dato ID .)


state 49

    (21) llamada -> ID PIZQ . PDER
    (22) llamada -> ID PIZQ . lista_expresiones PDER
    (32) lista_expresiones -> . lista_expresiones COMA expresion
    (33) lista_expresiones -> . expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion AND expresion
    (36) expresion -> . NOT expresion
    (37) expresion -> . expresion MENOR expresion
    (38) expresion -> . expresion MAYOR expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion MENORIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion IGUALIGUAL expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion MULTIPLICACION expresion
    (47) expresion -> . expresion DIVISION expresion
    (48) expresion -> . PIZQ expresion PDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . TRUE
    (54) expresion -> . FALSE
    (55) expresion -> . llamada
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER

    PDER            shift and go to state 64
    NOT             shift and go to state 51
    MENOS           shift and go to state 52
    PIZQ            shift and go to state 53
    ENTERO          shift and go to state 54
    DECIMAL         shift and go to state 55
    ID              shift and go to state 56
    CADENA          shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59

    lista_expresiones              shift and go to state 65
    expresion                      shift and go to state 66
    llamada                        shift and go to state 60

state 50

    (24) return_inst -> RETURN_W expresion .
    (34) expresion -> expresion . OR expresion
    (35) expresion -> expresion . AND expresion
    (37) expresion -> expresion . MENOR expresion
    (38) expresion -> expresion . MAYOR expresion
    (39) expresion -> expresion . MAYORIGUAL expresion
    (40) expresion -> expresion . MENORIGUAL expresion
    (41) expresion -> expresion . DIFERENTE expresion
    (42) expresion -> expresion . IGUALIGUAL expresion
    (44) expresion -> expresion . MAS expresion
    (45) expresion -> expresion . MENOS expresion
    (46) expresion -> expresion . MULTIPLICACION expresion
    (47) expresion -> expresion . DIVISION expresion

    PTCOMA          reduce using rule 24 (return_inst -> RETURN_W expresion .)
    OR              shift and go to state 67
    AND             shift and go to state 68
    MENOR           shift and go to state 69
    MAYOR           shift and go to state 70
    MAYORIGUAL      shift and go to state 71
    MENORIGUAL      shift and go to state 72
    DIFERENTE       shift and go to state 73
    IGUALIGUAL      shift and go to state 74
    MAS             shift and go to state 75
    MENOS           shift and go to state 76
    MULTIPLICACION  shift and go to state 77
    DIVISION        shift and go to state 78


state 51

    (36) expresion -> NOT . expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . expresion AND expresion
    (36) expresion -> . NOT expresion
    (37) expresion -> . expresion MENOR expresion
    (38) expresion -> . expresion MAYOR expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion MENORIGUAL expresion
    (41) expresion -> . expresion DIFERENTE expresion
    (42) expresion -> . expresion IGUALIGUAL expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion MULTIPLICACION expresion
    (47) expresion -> . expresion DIVISION expresion
    (48) expresion -> . PIZQ expresion PDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . TRUE
    (54) expresion -> . FALSE
    (55) expresion -> . llamada
    (21) llamada -> . ID PIZQ PDER
    (22) llamada -> . ID PIZQ lista_expresiones PDER
